--- a/app/src/main/res/layout/layout_main_body.xml
+++ b/app/src/main/res/layout/layout_main_body.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/text_limit"
+                android:text="@string/text_marketing"
                 android:textColor="@color/background_red"
                 android:textSize="25sp" />
 
